fix another typo

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2845,7 +2845,7 @@ agreement, given the different levels of precision.
 
 In addition \fs has already undergone some user testing. This includes
 analytic tests of the $R$-symmetric low-energy model (MRSSM) and
-alternative E6 inspired SUSY scenarios.  The users who have helped us
+alternative $E_6$-inspired SUSY scenarios.  The users who have helped us
 with this are thanked in the acknowledgements.
 
 We also compared the run-time of \fs against SPheno, Softsusy and the
@@ -2891,7 +2891,7 @@ about challenges in non-minimal SUSY models. The authors would also
 like to thank Lewis Tunstall for helping with early tests against
 Next-to-Minimal Softsusy; Sophie Underwood for discovering problems
 when introducing couplings with a single family index; Philip Diessner
-for testing and identifying several bugs in FlexibleSUSY and in SARAH,
+for testing and identifying several bugs in \fs and in SARAH,
 in work on the MRSSM; Ulrik Günther for compilation tests on Mac OS X
 and Dylan Harries for spotting a bug in the configuration script.
 %
