--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2870,7 +2870,7 @@ easily exchanged, extended, modified and reused.  This provides great
 flexibility for creating custom spectrum generators for both the most
 common and most extraordinary models.  We have demonstrated these
 features in detailed examples for the NUHMSSM, right handed neutrinos
-and on adding three loop RGEs and two loop matching for the strong
+and on adding three-loop RGEs and two-loop matching for the strong
 gauge coupling.  
 
 The generated code has been extensively tested against Softsusy, and
