stick to -ize convention

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -304,7 +304,7 @@ parameters must be specified in a separate \code{FlexibleSUSY.m.in} file.
 Based on this information \fs uses \sarah to obtain tree-level
 expressions for the mass matrices and electroweak symmetry breaking
 conditions, one-loop self energies, one-loop tadpoles corrections and
-two-loop renormalisation group equations (RGEs) for the model.
+two-loop renormalization group equations (RGEs) for the model.
 Additional corrections which have been calculated elsewhere, such as
 two-loop corrections to the Higgs masses\footnote{By default
   \fs has two-loop corrections to the Higgs masses for the
