--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -2796,7 +2796,7 @@ two different sets of CMSSM spectrum generators:
 For the run-time comparison we're generating $2\cdot 10^{4}$ random
 CMSSM parameter points with $m_0\in [50,1000]\unit{GeV}$, $m_{1/2}\in
 [50,1000]\unit{GeV}$, $\tan\beta\in [1,100]$, $\sign\mu\in \{-1,+1\}$
-and $A_0\in [-1000,1000]\unit{GeV}$.  For each point an SLHA input
+and $A_0\in [-1000,$ $1000]\unit{GeV}$.  For each point an SLHA input
 file is created by appending the values of $m_0$, $m_{1/2}$,
 $\tan\beta$, $\sign\mu$, $A_0$ in form of a \code{MINPAR} block to the
 SLHA template file given in
