--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+FlexibleSUSY-1.0.1 [not released yet]
+
+ * Bugfix (commit 4dc897e): consts.hpp is not distributed but appears
+   in the list of installed headers
+
 FlexibleSUSY-1.0.0 [June, 10 2014]
 
  * Bugfix (commit 399a1c8): renaming SoftsusyMSSM and SoftsusyNMSSM
