added slha input file to run example in README file. Since we removed the default point running without would give an error.

--- a/README
+++ b/README
@@ -87,7 +87,8 @@ Example
    $ ./createmodel --name=NMSSM
    $ ./configure --with-models=NMSSM
    $ make
-   $ ./models/NMSSM/run_NMSSM.x
+   $ ./models/NMSSM/run_NMSSM.x \
+     --slha-input-file=model_files/NMSSM/LesHouches.in.NMSSM
 
 
 Creating only the source code files -- no compilation
