--- a/README
+++ b/README
@@ -217,6 +217,7 @@ for easy plotting.  In the MSSM for example these data files can be
 generated via
 
    $ ./models/MSSM/run_MSSM.x \
+     --slha-input-file=model_files/MSSM/LesHouches.in.MSSM \
      --rgflow-output-file=MSSM_rgflow.dat \
      --spectrum-output-file=MSSM_spectrum.dat
 
