typo in last edit he --> the

--- a/README
+++ b/README
@@ -232,5 +232,5 @@ plotted with the gnuplot scripts in the model directory:
 
 The latter is just for illustration and currently plots all DR-bar
 parameters regardless of dimension, so the resulting plot is not
-particularly informative.  However he user may then adapt this script
+particularly informative.  However the user may then adapt this script
 to plot any chosen subset of the parameters.
