--- a/README
+++ b/README
@@ -10,7 +10,7 @@ Homepage:                https://flexiblesusy.hepforge.org
 Mailing list:            flexiblesusy@projects.hepforge.org
 Source code repository:  https://github.com/FlexibleSUSY
 Bug reports:             https://github.com/FlexibleSUSY/FlexibleSUSY/issues
-References:              arxiv:1406:XXXX[hep-ph]
+References:              arxiv:1406:2319 [hep-ph]
 
 
 Requirements
