added adelade pre-print number to paper.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -92,7 +92,6 @@ bookmarks=true, linktocpage]{hyperref}
 \journal{Computer Physics Communications}
 \begin{document}
 \begin{frontmatter}
-
  \title{\Large\bf FlexibleSUSY --- A spectrum generator generator for supersymmetric models}
 
 \author[adelaide]{Peter Athron}
@@ -146,7 +145,8 @@ renormalization group equations
 \begin{textblock*}{7em}(\textwidth,1cm)
 \noindent\footnotesize
 FTUV--14--3904 \\
-IFIC--14--40
+IFIC--14--40 \\
+ADP-14-17/T875
 \end{textblock*}
 
 \section{Program Summary}
