--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -239,7 +239,7 @@ significantly higher limits on first and second generation squarks.
 These developments motivate the exploration of non-minimal SUSY models
 which ameliorate the naturalness problems, as can happen in the \ESSM
 \cite{King:2005jy,King:2005my,King:2007uj,Athron:2010zz} and USSM
-\cite{Fayet:1977yc,Suematsu:1994qm,Cvetic:1995rj,deCarlos:1997yv,Cvetic:1997ky,Demir:1998dk,Langacker:1998tc,Erler:2002pr,Choi:2006fz,Ham:2007wc,Langacker:2008yv,Ham:2008xf,Kalinowski:2008iq}
+\cite{Fayet:1977yc,Suematsu:1994qm,Cvetic:1995rj,deCarlos:1997yv,Cvetic:1997ky,Demir:1998dk,Langacker:1998tc,Erler:2002pr,Choi:2006fz,Ham:2007wc,Langacker:2008yv,Ham:2008xf,Kalinowski:2008iq,Bharucha:2013ela}
 by raising the tree level Higgs mass. At the same time they can also
 motivate models that are developed with a fresh perspective, based on
 other considerations.  In both cases exploration of such models can be
@@ -3417,6 +3417,13 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   [arXiv:0811.2204 [hep-ph]].
   %%CITATION = ARXIV:0811.2204;%%
   %30 citations counted in INSPIRE as of 09 Jun 2014
+%\cite{Bharucha:2013ela}
+\bibitem{Bharucha:2013ela} 
+  A.~Bharucha, A.~Goudelis and M.~McGarrie,
+  %``En-gauging Naturalness,''
+  arXiv:1310.4500 [hep-ph].
+  %%CITATION = ARXIV:1310.4500;%%
+  %9 citations counted in INSPIRE as of 12 Jun 2014
 
 
 
