added more references to non-decoupled D-term approach, citing the kaplan paper. and Anibal Medina's paper.  there are probably many more.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -238,8 +238,8 @@ significantly higher limits on first and second generation squarks.
 
 These developments motivate the exploration of non-minimal SUSY models
 which ameliorate the naturalness problems, as can happen in the \ESSM
-\cite{King:2005jy,King:2005my,King:2007uj,Athron:2010zz} and USSM
-\cite{Fayet:1977yc,Suematsu:1994qm,Cvetic:1995rj,deCarlos:1997yv,Cvetic:1997ky,Demir:1998dk,Langacker:1998tc,Erler:2002pr,Choi:2006fz,Ham:2007wc,Langacker:2008yv,Ham:2008xf,Kalinowski:2008iq,Bharucha:2013ela}
+\cite{King:2005jy,King:2005my,King:2007uj,Athron:2010zz}, USSM
+\cite{Fayet:1977yc,Suematsu:1994qm,Cvetic:1995rj,deCarlos:1997yv,Cvetic:1997ky,Demir:1998dk,Langacker:1998tc,Erler:2002pr,Choi:2006fz,Ham:2007wc,Langacker:2008yv,Ham:2008xf,Kalinowski:2008iq} or from other gauge extensions \cite{Batra:2003nj, Medina:2009ey, Bharucha:2013ela}, 
 by raising the tree level Higgs mass. At the same time they can also
 motivate models that are developed with a fresh perspective, based on
 other considerations.  In both cases exploration of such models can be
@@ -3418,6 +3418,7 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   %%CITATION = ARXIV:0811.2204;%%
   %30 citations counted in INSPIRE as of 09 Jun 2014
 %\cite{Bharucha:2013ela}
+
 \bibitem{Bharucha:2013ela} 
   A.~Bharucha, A.~Goudelis and M.~McGarrie,
   %``En-gauging Naturalness,''
@@ -3425,7 +3426,22 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   %%CITATION = ARXIV:1310.4500;%%
   %9 citations counted in INSPIRE as of 12 Jun 2014
 
-
+%\cite{Batra:2003nj}
+\bibitem{Batra:2003nj} 
+  P.~Batra, A.~Delgado, D.~E.~Kaplan and T.~M.~P.~Tait,
+  %``The Higgs mass bound in gauge extensions of the minimal supersymmetric standard model,''
+  JHEP {\bf 0402}, 043 (2004)
+  [hep-ph/0309149].
+  %%CITATION = HEP-PH/0309149;%%
+  %174 citations counted in INSPIRE as of 12 Jun 2014
+%\cite{Medina:2009ey}
+\bibitem{Medina:2009ey} 
+  A.~D.~Medina, N.~R.~Shah and C.~E.~M.~Wagner,
+  %``A Heavy Higgs and a Light Sneutrino NLSP in the MSSM with Enhanced SU(2) D-terms,''
+  Phys.\ Rev.\ D {\bf 80}, 015001 (2009)
+  [arXiv:0904.1625 [hep-ph]].
+  %%CITATION = ARXIV:0904.1625;%%
+  %9 citations counted in INSPIRE as of 12 Jun 2014
 
  %\cite{Staub:2010ty}
 \bibitem{Staub:2010ty} 
