added Gregor Hellwig and Gambit to acknowledgements.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -2914,13 +2914,18 @@ precision and reliability.
 A.V.\ would like to thank Florian Staub for countless explanations of
 SARAH's internals, discussions, and exceptionally fast bug
 fixing. P.A.~would like to thank Roman Nevzorov for useful discussions
-about challenges in non-minimal SUSY models. The authors would also
-like to thank Lewis Tunstall for helping with early tests against
+about challenges in non-minimal SUSY models and the GAMBIT
+collaboration for helpful suggestions, particularly regarding
+lowering our compiler prerequisites. The authors would also like to
+thank Lewis Tunstall for helping with early tests against
 Next-to-Minimal Softsusy; Sophie Underwood for discovering problems
-when introducing couplings with a single family index; Philip Diessner
-for testing and identifying several bugs in \fs and in SARAH,
-in work on the MRSSM; Ulrik Günther for compilation tests on Mac OS X
-and Dylan Harries for spotting a bug in the configuration script.
+when introducing couplings with a single family index; Gregor Hellwig
+for writing the first version of the E6SSM model file; Philip Diessner
+for further adaptions to the E6SSM model file and for supplying it to
+us and for for testing and identifying several bugs in \fs and in
+SARAH, in work on the MRSSM; Ulrik Günther for compilation tests on
+Mac OS X and Dylan Harries for spotting a bug in the configuration
+script.
 %
 J.P. acknowledges support from the MEC and FEDER (EC) Grants
 FPA2011--23596 and the Generalitat Valenciana under grant PROMETEOII/2013/017.
