added s few of Roman's E6 custodial symmetry papers to manual, since that is a really nice alternative formulation of the E6SSM and can ~fit with our model files since we neglect many couplings.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -238,7 +238,7 @@ significantly higher limits on first and second generation squarks.
 
 These developments motivate the exploration of non-minimal SUSY models
 which ameliorate the naturalness problems, as can happen in the \ESSM
-\cite{King:2005jy,King:2005my,King:2007uj,Athron:2010zz}, USSM
+\cite{King:2005jy,King:2005my,King:2007uj,Athron:2010zz,Nevzorov:2012hs,Nevzorov:2013tta,Nevzorov:2013ixa}, USSM
 \cite{Fayet:1977yc,Suematsu:1994qm,Cvetic:1995rj,deCarlos:1997yv,Cvetic:1997ky,Demir:1998dk,Langacker:1998tc,Erler:2002pr,Choi:2006fz,Ham:2007wc,Langacker:2008yv,Ham:2008xf,Kalinowski:2008iq} or from other gauge extensions \cite{Batra:2003nj, Medina:2009ey, Bharucha:2013ela}, 
 by raising the tree level Higgs mass. At the same time they can also
 motivate models that are developed with a fresh perspective, based on
@@ -3312,6 +3312,34 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   Nucl.\ Phys.\ Proc.\ Suppl.\  {\bf 200-202}, 120 (2010).
   %%CITATION = NUPHZ,200-202,120;%%
   %5 citations counted in INSPIRE as of 09 Jun 2014
+
+%\cite{Nevzorov:2012hs}
+\bibitem{Nevzorov:2012hs} 
+  R.~Nevzorov,
+  %``E6 Inspired SUSY Models with Exact Custodial Symmetry,''
+  Phys.\ Rev.\ D {\bf 87}, 015029 (2013)
+  [arXiv:1205.5967 [hep-ph]].
+  %%CITATION = ARXIV:1205.5967;%%
+  %4 citations counted in INSPIRE as of 13 Jun 2014
+
+%\cite{Nevzorov:2013tta}
+\bibitem{Nevzorov:2013tta} 
+  R.~Nevzorov and S.~Pakvasa,
+  %``Exotic Higgs decays in the $E_6$ inspired SUSY models,''
+  Phys.\ Lett.\ B {\bf 728}, 210 (2014)
+  [arXiv:1308.1021 [hep-ph]].
+  %%CITATION = ARXIV:1308.1021;%%
+  %2 citations counted in INSPIRE as of 13 Jun 2014
+
+%\cite{Nevzorov:2013ixa}
+\bibitem{Nevzorov:2013ixa} 
+  R.~Nevzorov,
+  %``Quasi-fixed point scenarios and the Higgs mass in the E6 inspired SUSY models,''
+  Phys.\ Rev.\ D {\bf 89}, 055010 (2014)
+  [arXiv:1309.4738 [hep-ph]].
+  %%CITATION = ARXIV:1309.4738;%%
+  %1 citations counted in INSPIRE as of 13 Jun 2014
+
 
 %\cite{Fayet:1977yc}
 \bibitem{Fayet:1977yc}
