updated pulication info for nmssm-softsusy.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -3187,9 +3187,10 @@ Block MINPAR
 \bibitem{Allanach:2013kza} 
   B.~C.~Allanach, P.~Athron, L.~C.~Tunstall, A.~Voigt and A.~G.~Williams,
   %``Next-to-Minimal SOFTSUSY,''
-  arXiv:1311.7659 [hep-ph].
+  Comput.\ Phys.\ Commun.\  {\bf 185}, 2322 (2014)
+  [arXiv:1311.7659 [hep-ph]].
   %%CITATION = ARXIV:1311.7659;%%
-  %1 citations counted in INSPIRE as of 24 Apr 2014
+  %2 citations counted in INSPIRE as of 15 Jun 2014
 \bibitem{NMSSM} P. Fayet, Nucl. Phys. B \textbf{90} (1975) 104; Phys. Lett.
 B \textbf{64} (1976) 159; Phys. Lett. B \textbf{69} (1977) 489 and Phys. Lett. B
 \textbf{84} (1979) 416; H.P. Nilles, M. Srednicki and D. Wyler, Phys. Lett. B
