--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1821,17 +1821,29 @@ model file.  This enables two-loop Higgs FORTRAN routines supplied by
 P.~Slavich from
 \cite{Degrassi:2001yf,Brignole:2001jy,Dedes:2002dy,Brignole:2002bz,Dedes:2003km}
 which add two-loop corrections of $\oatas$, $\oabas$, $\oatq$,
-$\oabq$, $\oatauq$ and $\oatab$.  Something similar is
-done for the NMSSM, but in this case the NMSSM $\oatas$, $\oabas$
-pieces come from \cite{Degrassi:2009yq}, while for $\oatq$,
-$\oabq$, $\oatauq$ and $\oatab$ the MSSM pieces are used
-though it should be understood that these are not complete in the
-NMSSM. For other models since the Higgs mass is a very important
-measurement and the two-loop corrections can be larger than the
-current experimental error \cite{Degrassi:2009yq} we recommend that
-the leading log two-loop corrections are estimated, by generalizing
-those of the MSSM or NMSSM, as has been done, for example, in the
-E$_6$SSM \cite{King:2005jy}.
+$\oabq$, $\oatauq$ and $\oatab$.  Something similar is done for the
+NMSSM, but in this case the NMSSM $\oatas$, $\oabas$ pieces come from
+\cite{Degrassi:2009yq}, while for $\oatq$, $\oabq$, $\oatauq$ and
+$\oatab$ the MSSM pieces are used though it should be understood that
+these are not complete in the NMSSM.  Since the Higgs mass is a very
+important measurement and the two-loop corrections can be larger than
+the current experimental error \cite{Degrassi:2009yq} we recommend to
+set these switches to \code{True} in any MSSM-\footnote{In \fs a model
+  is MSSM-like if (i) its superpotential is approximately given by the
+  MSSM one, (ii) it implements $R$-parity conservation or something
+  equivalent, and (iii) contains two CP-even and CP-odd Higgs bosons,
+  where one CP-odd Higgs boson may be a Goldstone boson, all with an
+  MSSM-like coupling to $t$, $b$ and $\tau$.} and
+NMSSM-like\footnote{In \fs a model is NMSSM-like if (i) its
+  superpotential is approximately given by the NMSSM one, (ii) it
+  implements $R$-parity conservation or something equivalent, and
+  (iii) contains three CP-even and CP-odd Higgs bosons, where one or
+  two CP-odd Higgs bosons may be Goldstone bosons, all with an
+  NMSSM-like coupling to $t$, $b$ and $\tau$\@.  Examples for
+  NMSSM-like models are the USSM and the \ESSM.} model.  For models
+with a more extended Higgs sector we recommend that the leading log
+two-loop corrections are estimated by generalizing those of the MSSM
+or NMSSM.
 
 \section{Flexible Applications}
 \label{sec:Flexible}
