mark corresponding author for CPC

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -97,7 +97,9 @@ bookmarks=true, linktocpage]{hyperref}
 \author[adelaide]{Peter Athron}
 \author[valencia]{Jae-hyeon Park}
 \author[dresden]{Dominik St\"ockinger}
-\author[dresden]{Alexander Voigt}
+\author[dresden]{Alexander Voigt\corref{cor1}}
+\ead{Alexander.Voigt@physik.tu-dresden.de}
+\cortext[cor1]{Corresponding author}
 \address[adelaide]{ARC Centre of Excellence for Particle Physics at 
 the Tera-scale, School of Chemistry and Physics, University of Adelaide, 
 Adelaide SA 5005 Australia}
