--- a/README
+++ b/README
@@ -115,6 +115,21 @@ Example
      --slha-input-file=model_files/NMSSM/LesHouches.in.NMSSM
 
 
+Creating the soucre code documentation
+======================================
+
+FlexibleSUSY's source code documentation (including the generated
+source code files) can be generated with Doxygen in HTML format.  To
+generate the documentation please run:
+
+   $ make doc-html
+
+The generated HTML index file can then be found in doc/html/index.html
+and can be viewed with any HTML browser, e.g.
+
+   $ firefox doc/html/index.html
+
+
 Creating only the source code files -- no compilation
 =====================================================
 
