--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@ FlexibleSUSY-1.0.2 [not released yet]
  * Install specimen SLHA input files in the model directory when one
    runs the createmodel script
 
+ * Work around fields in Cp[] carrying an invalid index that cause
+   Part::partw when passed to SARAH`Vertex[].
+
 FlexibleSUSY-1.0.1 [June, 11 2014]
 
  * Bugfix (commit 4dc897e): consts.hpp is not distributed but appears
