--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@ FlexibleSUSY-1.0.2 [not released yet]
  * Bugfix (commit 689141da): Enable non-quadratic superpotential
    coupling matrices.
 
+ * Bugfix (commit d0e9cdb): Correctly set low-energy data (read from
+   the SLHA input file) in the low-energy constraint.
+
  * Install specimen SLHA input files in the model directory when one
    runs the createmodel script.
 
