--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@ FlexibleSUSY-1.0.2 [not released yet]
  * Work around fields in Cp[] carrying an invalid index that cause
    Part::partw when passed to SARAH`Vertex[].
 
+ * Support Cygwin on MS Windows
+
 FlexibleSUSY-1.0.1 [June, 11 2014]
 
  * Bugfix (commit 4dc897e): consts.hpp is not distributed but appears
