add remarks on who does what for the CPC response

--- a/doc/flexiblesusy-paper-response-1.tex
+++ b/doc/flexiblesusy-paper-response-1.tex
@@ -22,6 +22,9 @@
   belowskip=1em,
 }
 
+% temporary command
+\newcommand{\remark}[1]{\emph{#1}}
+
 \title{Response to CPC-D-14-00362}
 \author{Peter Athron, Jae-hyeon Park, Dominik St\"ockinger, Alexander Voigt}
 
@@ -32,18 +35,23 @@
 \section{Reviewer 1}
 \subsection{A Physics}
 \subsubsection{Comment 1}
+\remark{addressed by Alex}
 
 \subsubsection{Comment 2}
+\remark{addressed by Jae-hyeon}
 \begin{lstlisting}
   SUSYScale = Sqrt[ Product[ M[Su[i]]^(Abs[ZU[i,3]]^2 +
   Abs[ZU[i,6]]^2), {i,6} ] ]
 \end{lstlisting}
 
 \subsubsection{Comment 3}
+\remark{addressed by Peter}
 
 \subsubsection{Comment 4}
+\remark{addressed by Alex}
 
 \subsubsection{Comment 5}
+\remark{addressed by Alex}
 
 \subsection{B Presentation}
 
