small edit to first sentence of introduction to address point 1 from referee 2.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -183,7 +183,7 @@ ADP-14-17/T875
 \section{Introduction}
 Supersymmetry (SUSY) provides the only non-trivial way to extend the
 space-time symmetries of the Poincar\'e
-group \cite{Coleman:1967ad,Haag:1974qh}, leading many to suspect that
+group, which still has scattering in the resulting quantum theory \cite{Coleman:1967ad,Haag:1974qh}. This leads many to suspect that
 SUSY may be realized in nature in some form. In particular
 supersymmetric extensions of the standard model (SM) where SUSY is broken
 at the TeV scale have been proposed to solve the hierarchy
