expand undefined TeX macros

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1173,8 +1173,8 @@ condition classes are generated as follows:
 
 The low-scale constraint matches the SUSY model to the Standard Model.
 Currently \fs allows only SUSY models with semisimple gauge groups,
-which contain the Standard Model gauge group $\SUc\times\SUL\times\UY$
-as factor.  This enables \fs to directly identify the strong,
+which contain the Standard Model gauge group $SU(3)\times SU(2)\times
+U(1)$ as factor.  This enables \fs to directly identify the strong,
 left-handed and hypercharge gauge couplings $g_i$ ($i=1,2,3$).
 
 The low-scale constraint automatically calculates the \DRbar\ gauge
